@@ -55,7 +55,7 @@ function parseEmail (&$body) {
     $addresses = array();
 
     /* Find all the email addresses in the body */
-    while(eregi($Email_RegExp_Match, $sbody, $regs)) {
+    while (preg_match('/' . $Email_RegExp_Match . '/i', $sbody, $regs)) {
         $addresses[$regs[0]] = strtr($regs[0], array('&amp;' => '&'));
         $start = strpos($sbody, $regs[0]) + strlen($regs[0]);
         $sbody = substr($sbody, $start);
@@ -183,7 +183,7 @@ function parseUrl (&$body) {
             $url = substr($body, $target_pos, $end-$target_pos);
 
             /* Needed since lines are not passed with \n or \r */
-            while ( ereg("[,\.]$", $url) ) {
+            while ( preg_match('/[,.]$/', $url) ) {
                 $url = substr( $url, 0, -1 );
                 $end--;
             }
@@ -217,7 +217,7 @@ function getEmail($string) {
     $addresses = array();
 
     /* Find all the email addresses in the body */
-    while (eregi($Email_RegExp_Match, $string, $regs)) {
+    while (preg_match('/' . $Email_RegExp_Match . '/i', $string, $regs)) {
         $addresses[$regs[0]] = strtr($regs[0], array('&amp;' => '&'));
         $start = strpos($string, $regs[0]) + strlen($regs[0]);
         $string = substr($string, $start);
